# qmlMusic

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  LyricsExtractor.cpp  LyricsExtractor.h  Main.qml  MusicScanner.cpp  MusicScanner.h  MusicUi.qml  PlayerController.cpp  PlayerController.h  README.md  backendmanager.cpp  backendmanager.h  localsongmodel.cpp  localsongmodel.h  main.cpp  playlist.cpp  playlist.h  playlistmodel.cpp  playlistmodel.h  resource.qrc  song.cpp  song.h  songmodel.cpp  songmodel.h  开发文档.md
doc/: UML类建模文档.md
qml/: LeftGuideBar.qml  Local.qml  Lyrics.qml  Main.qml  MusicUi.qml  MyFavoritesView.qml  PlayController.qml  PlayQueueView.qml  PlaylistGridView.qml  PlaylistSongView.qml  PlaylistView.qml  ScanMusicView.qml  SongView.qml  TopBar.qml
sql/: MusicDatas.db  init.sql
